cluster/apps/dashy/dashy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  labels:
    app.kubernetes.io/name: dashy
  annotations:
    configmap.reloader.stakater.com/reload: "dashy-config"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dashy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashy
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:2.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
          readinessProbe:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "test -d /app/dist"
            initialDelaySeconds: 25
            periodSeconds: 2
            failureThreshold: 10
          volumeMounts:
            - mountPath: /app/public/conf.yml
              name: dashy-config
              subPath: conf.yml
          resources:
            requests:
              memory: 384Mi
              cpu: 20m
            limits:
              memory: 1536Mi
              cpu: 1000m
      volumes:
        - name: dashy-config
          configMap:
            name: dashy-config
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  labels:
    app.kubernetes.io/name: dashy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dashy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  labels:
    app.kubernetes.io/name: dashy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-url: "https://auth.rwcloud.org/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.rwcloud.org/oauth2/start
spec:
  ingressClassName: nginx
  rules:
    - host: &host k8s.rwcloud.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashy
                port:
                  number: 80
  tls:
    - hosts:
        - *host
